# xml-selector

./: .gitignore  .gitmodules  .npmignore  Makefile  Makefile.am  README.md  acinclude.m4  binding.gyp  configure.ac  index.js  libxq.h  nodelist.c  package.json  search.c  traverse.c  xq.c  xqutil.h
ext/: CharacterData.cpp  CharacterData.h  Document.cpp  Document.h  Element.cpp  Element.h  Node.cpp  Node.h  utils.h  xQWrapper.cpp  xQWrapper.h  xqjs.cpp
test/: xq_addNamespace.js  xq_arrayAccess.js  xq_attr.js  xq_available.js  xq_children.js  xq_closest.js  xq_constructor.js  xq_every.js  xq_filter.js  xq_find.js  xq_findIndex.js  xq_first.js  xq_invalidSelectors.js  xq_last.js  xq_length.js  xq_next.js  xq_not.js  xq_parent.js  xq_prev.js  xq_reduce.js  xq_reduceRight.js  xq_search.js  xq_some.js  xq_text.js  xq_xml.js
test/document/: character_data.js  document.js  element.js  node.js  parse.js  zz_gc.js
tests/: Makefile.am  check_search.c  check_xq  check_xq.c
